--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-06-17  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/ScriptingContext.cs
+	(ScriptingContext.LastExamineAddress): Removed.
+
+	* frontends/scripting/Command.cs (ExamineCommand): Store the end
+	address internally and use it when we're repeating.
+
+2004-06-17  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/Main.cs (SetupEngine): `where' is now an
 	alias for `backtrace'.
 
