--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-17  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Command.cs (DisassembleCommand): Take an
+	optional pointer expression, add auto-repeat support.
+
+2004-06-17  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/ScriptingContext.cs
 	(ScriptingContext.LastExamineAddress): Removed.
 
