--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-06-18  Martin Baulig  <martin@ximian.com>
+
+	* backends/SingleSteppingEngine.cs (OperationType.FinishNative):
+	New stepping operation.  This does a "finish" if we don't have a
+	current method by checking the stack pointer.
+
+	* backends/Process.cs (Process.FinishNative): New public method.
+
+	* frontends/scripting/Command.cs (FinishCommand): Added optional
+	`-native' argument.
+
 2004-06-17  Martin Baulig  <martin@ximian.com>
 
 	* classes/StackFrame.cs (StackFrame): Added `StackPointer' and
