--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-06-18  Martin Baulig  <martin@ximian.com>
 
+	* backends/ILanguageBackend.cs
+	(ILanguageBackend.GetTrampolineAddress): Added `out bool is_start';
+	if true, then the return address is the start of the trampoline
+	function and we need to FinishNative through it.
+
+2004-06-18  Martin Baulig  <martin@ximian.com>
+
 	* backends/SingleSteppingEngine.cs (OperationType.FinishNative):
 	New stepping operation.  This does a "finish" if we don't have a
 	current method by checking the stack pointer.
