--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-18  Martin Baulig  <martin@ximian.com>
 
+	* backends/mono-csharp/MonoClass.cs: If we have a parent class,
+	correctly index our fields, properties and methods so we can
+	distinguish members from our parent class.
+
+2004-06-18  Martin Baulig  <martin@ximian.com>
+
 	* backends/Inferior.cs (Inferior.GetCurrentFrame): New internal
 	function; this is a more reliable way of getting the inner
 	Inferior.StackFrame.	
