2004-06-21  Martin Baulig  <martin@ximian.com>
	* frontends/scripting/Expression.cs
	(ParentClassExpression): Removed.

svn path=/trunk/debugger/; revision=30007

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-21  Martin Baulig  <martin@ximian.com>
+
+	* frontends/scripting/Expression.cs
+	(ParentClassExpression): Removed.
+
 2004-06-20  Martin Baulig  <martin@ximian.com>
 
 	* classes/SourceInfo.cs (SourceInfo.FindMethod): Removed.
