--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-21  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Command.cs (CallCommand): New command.
+
+2004-06-21  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/Expression.cs
 	(ThisExpression, BaseExpression): New public classes.
 
