--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,21 @@
 2004-06-23  Martin Baulig  <martin@ximian.com>
 
+	* backends/server/server.h
+	(mono_debugger_server_insert_hw_breakpoint): Automatically search
+	for a free debug register and return it in `idx' (made this an
+	`guint32 *idx' out param).
+
+	* backends/Inferior.cs (Inferior.InsertHwBreakpoint): Made `idx'
+	and "out" parameter and added `bool fallback'.  We now search for
+	an empty debug register and return it in `idx'.  If none can be
+	found and `fallback' is set, insert a normal breakpoint.
+
+	* backends/SingleSteppingEngine.cs
+	(SingleSteppingEngine.insert_temporary_breakpoint): Try to insert
+	a hardware breakpoint and set the fallback flag.
+
+2004-06-23  Martin Baulig  <martin@ximian.com>
+
 	* backends/SingleSteppingEngine.cs (SingleSteppingEngine.Start):
 	Make this method internal and make new threads run in the background.
 
