--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-06-23  Martin Baulig  <martin@ximian.com>
 
+	* backends/server/i386-arch.c (server_ptrace_get_backtrace): Added
+	a 0x0xffffe002 (NPTL syscall trampoline) hack.
+
+	* arch/ArchitectureI386.cs
+	(ArchitectureI386.GetCallTarget): Likewise.
+
+2004-06-23  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/Command.cs (LookupCommand): New command.
 
 2004-06-23  Martin Baulig  <martin@ximian.com>
