--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-06-26  Martin Baulig  <martin@ximian.com>
+
+	* arch/Bfd.cs: Use correct start/end addresses.
+
+	* arch/DwarfReader.cs (DwarfException, DwarfBinaryReader): Don't
+	nest these two classes in DwarfReader.
+
+	* arch/DwarfFrameReader.cs: New file.
+
+	* classes/Module.cs (Module.UnwindStack): New abstract method.
+
 2004-06-25  Martin Baulig  <martin@ximian.com>
 
 	* classes/StackFrame.cs (Registers): New public class.
