--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-06-29  Martin Baulig  <martin@ximian.com>
 
+	* classes/Threading.cs (DebuggerWaitHandler.DebugFlags): New
+	public field; default to DebugFlags.Mutex.
+
+	* backends/BreakpointManager.cs: Set DebugFlags.BreakpointManager
+	on our mutex.
+
+2004-06-29  Martin Baulig  <martin@ximian.com>
+
 	* backends/server/server.h
 	(mono_debugger_server_get_signal_info): Changed type of last
 	argument to `SignalInfo **'; returns a pointer to the g_new()ed
